--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "root":"https://app.kinghost.net",
+  "root":"https://aecioeu-whatsapp-5265.zeet.app",
   "questionValue" : 3.79,
   "withdraw": 200,
   "videoId": 515963933,
