--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "root":"https://aecioeu-whatsapp-5265.zeet.app",
   "questionValue" : 3.79,
+  "share_numbers" : 5,
   "pay" : 0.99,
   "withdraw": 200,
   "videoId": 515963933,
